spacing fixes

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -17,11 +17,11 @@
 
     h1, h2 {
         font-weight: $font-weight-bold;
-        margin-left: -0.8rem !important;
+        margin-left: -1rem !important;
     }
 
     h3, h4, h5 {
-        margin-left: 0rem;
+        margin-left: -0.5rem;
     }
 
     > h2 {
@@ -38,7 +38,7 @@
 
     > h3, > h4, > h5, > h6 {
         margin-bottom: 1rem;
-        margin-top: 2rem;
+        margin-top: 1.5rem;
     }
 
     li {
